# chess4

./: .gitignore  CMakeLists.txt  gen.bat  readme.md
Doc/: chess4_for_users.md  计算机大类——高级语言程序设计实验大作业反思报告-2020年模板.doc
docs/: 高级语言程序设计实验大作业反思报告.doc
src/: main.c
src/cboard/: CMakeLists.txt  cboard.c  cboard.h
src/cli/: CMakeLists.txt  cli.c  cli.h
src/natsu/: CMakeLists.txt  natsu.c  natsu.h
